--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 -i https://pypi.org/simple
-async-generator==1.10
-attrs==18.2.0
+certifi==2018.11.29
+chardet==3.0.4
 idna==2.8
-outcome==1.0.0
-sniffio==1.0.0
-sortedcontainers==2.1.0
-trio==0.10.0
+requests==2.21.0
+urllib3==1.24.1
