--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
 -i https://pypi.org/simple
+async-generator==1.10
+attrs==18.2.0
 certifi==2018.11.29
 chardet==3.0.4
+h11==0.8.1
 idna==2.8
+neo4j==1.7.1
+neobolt==1.7.4
+neotime==1.7.4
+outcome==1.0.0
+pytz==2018.9
+pyyaml==3.13
+redis==3.1.0
 requests==2.21.0
+six==1.12.0
+sniffio==1.0.0
+sortedcontainers==2.1.0
+trio==0.11.0
 urllib3==1.24.1
